--- a/shopList/main.html
+++ b/shopList/main.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>ShopLister</title>
 	<style type="text/css"></style>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
-	
+	<div id="main">
+		<i><img src="images/logo.png"></i>
+		<h1>SHOP LISTER</h1>
+		<h3>Type a new item and press 'enter' to add</h3>
+		<h3><img src="images/check.png"> to cross off    <img src="images/x.png"> to erase</h3>
+		<input type="text" name="newitem" placeholder="+ Add New Item +">
+		<div id="list">
+			<p class="strike"><span><img src="images/check.png"></span> Apples <span><img src="images/x.png"></span></p>
+			<p class="strike"><span><img src="images/check.png"></span> Bananas <span><img src="images/x.png"></span></p>
+			<p class="need"><span><img src="images/check.png"></span> Cheese <span><img src="images/x.png"></span></p>
+			<p class="need"><span><img src="images/check.png"></span> Dip <span><img src="images/x.png"></span></p>
+			<p class="need"><span><img src="images/check.png"></span> Peaches <span><img src="images/x.png"></span></p>
+		</div>
+	</div>
 </body>
 </html>
