--- a/shopList/main.html
+++ b/shopList/main.html
@@ -15,13 +15,10 @@
 		<h3>Type a new item and press 'enter' to add</h3>
 		<h3><img src="images/check.png"> to cross off    <img src="images/x.png"> to erase</h3>
 		<input type="text" name="newitem" placeholder="+ Add New Item +">
-		<div id="list">
-			<p class="strike"><span><img src="images/check.png"></span> Apples <span><img src="images/x.png"></span></p>
-			<p class="strike"><span><img src="images/check.png"></span> Bananas <span><img src="images/x.png"></span></p>
-			<p class="need"><span><img src="images/check.png"></span> Cheese <span><img src="images/x.png"></span></p>
-			<p class="need"><span><img src="images/check.png"></span> Dip <span><img src="images/x.png"></span></p>
-			<p class="need"><span><img src="images/check.png"></span> Peaches <span><img src="images/x.png"></span></p>
-		</div>
+		<ul>
+			<li class="strike"><img src="images/check.png" class="check">Apples<img src="images/x.png" class="x"></li>
+			<li class="need"><img src="images/check.png" class="check">Bananas<img src="images/x.png" class="x"></li>
+		</ul>
 	</div>
 </body>
 </html>
