--- a/shopList/main.html
+++ b/shopList/main.html
@@ -20,6 +20,6 @@
 		</ul>
 		<button name="reset" id="reset">Clear List</button>
 	</div>
-	<script type="text/javascript" script src="js/app.js"></script>
+	<script type="text/javascript" script src="https://lukemccomb.github.io/shopList/js/app.js"></script>
 </body>
 </html>
