--- a/shopList/main.html
+++ b/shopList/main.html
@@ -6,6 +6,7 @@
 	<style type="text/css"></style>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" script src="js/app.js"></script>
 <body>
 	<div id="main">
 		<i><img src="images/logo.png"></i>
@@ -20,6 +21,5 @@
 		</ul>
 		<button name="reset" id="reset">Clear List</button>
 	</div>
-	<script type="text/javascript" script src="https://lukemccomb.github.io/shopList/js/app.js"></script>
 </body>
 </html>
