--- a/shopList/main.html
+++ b/shopList/main.html
@@ -5,7 +5,7 @@
 	<title>ShopLister</title>
 	<style type="text/css"></style>
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script type="text/javascript" script src="js/app.js"></script>
 <body>
 	<div id="main">
