--- a/shopList/main.html
+++ b/shopList/main.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ShopLister</title>
+	<title>SHOPLISTR</title>
 	<style type="text/css"></style>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script type="text/javascript" script src="js/app.js"></script>
 <body>
 	<div id="main">
-		<i><img src="images/logo.png"></i>
-		<h1>SHOP LISTER</h1>
+		<i><img src="images/logo.png" class="logo"></i>
+		<h1>SHOP LISTR</h1>
 		<h3>Type a new item and press 'enter' to add</h3>
 		<div id="inst">
 			<h3><img src="images/check.png"> to cross off</h3>
