--- a/FizzBuzz/main.html
+++ b/FizzBuzz/main.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>FizzBuzz</title>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
-	<script type="text/javascript" script src="app.js"></script>
+	 <script type="text/javascript" script src="app.js"></script>
 </head>
 <body>
-	
+	<input type="text" id="num" placeholder="Type a number and press enter or return" autocomplete="off" autofocus style="width: 90%; font-size: 150%;">
 </body>
 </html>
